[package]
name = "pty-process"
version = "0.4.0"
authors = ["Jesse Luehrs <doy@tozt.net>"]
edition = "2021"

description = "spawn commands attached to a pty"
repository = "https://git.tozt.net/pty-process"
readme = "README.md"
keywords = ["pty", "spawn", "execute", "process"]
categories = ["asynchronous", "command-line-interface"]
license = "MIT"
include = ["src/**/*", "LICENSE", "README.md", "CHANGELOG.md"]

[dependencies]
tokio = { version = "1.29.1", features = ["fs", "process", "net"], optional = true }
libc = "0.2.147"
rustix = { version = "0.38.7", features = ["pty", "process", "fs"] }

[target."cfg(windows)".dependencies]
tokio = { version = "1.29.1", features = ["fs", "process", "net"], optional = true }
windows = { version = "0.52.0", features = ["Win32_Foundation", "Win32_Security", "Win32_System_Console", "Win32_System_IO", "Win32_System_Pipes"] }

[dev-dependencies]
futures = "0.3.28"
regex = "1.9.3"
timeout-readwrite = "0.3.3"
tokio = { version = "1.29.1", features = ["full"] }

[target."cfg(unix)".dev-dependencies]
nix = { version = "0.26.2", default-features = false, features = ["signal", "fs", "term", "poll"] }

[features]
default = []

async = ["tokio"]
